@@ -8,7 +8,7 @@ recursive-include doc *.html *.png *.txt *.css *.1 *.example
 recursive-include detectors *.py
 recursive-include templates *.* home* page*
 global-exclude .svn .cvsignore *.pyc *.pyo .DS_Store
-include run_tests.py *.txt demo.py MANIFEST.in MANIFEST
+include run_tests.py *.txt demo.py MANIFEST.in MANIFEST doc/conf.py
 exclude BUILD.txt I18N_PROGRESS.txt TODO.txt
 exclude doc/security.txt doc/templating.txt
 include locale/*.po locale/*.mo locale/roundup.pot
